[gd_scene load_steps=10 format=3 uid="uid://lp5xmyief1ij"]

[ext_resource type="Script" path="res://scenes/GUI/menus/death_menu.gd" id="1_capo8"]
[ext_resource type="Texture2D" uid="uid://ljbmf5hba4o2" path="res://assets/sprites/v1.1 dungeon crawler 16X16 pixel pack/ui (new)/menu_button.png" id="2_ygwxt"]
[ext_resource type="Texture2D" uid="uid://cmuwdtjw3y1ll" path="res://assets/sprites/v1.1 dungeon crawler 16X16 pixel pack/ui (new)/menu_button_press.png" id="3_g5t6f"]
[ext_resource type="Texture2D" uid="uid://cwr303sdoy3f6" path="res://assets/sprites/v1.1 dungeon crawler 16X16 pixel pack/ui (new)/menu_button_hovered.png" id="4_7fnvi"]
[ext_resource type="PackedScene" uid="uid://ddwv0va7wls5j" path="res://scenes/GUI/hud/item_panel.tscn" id="5_dwv1h"]

[sub_resource type="LabelSettings" id="LabelSettings_2x622"]
font_size = 52

[sub_resource type="LabelSettings" id="LabelSettings_jruia"]
font_size = 14

[sub_resource type="LabelSettings" id="LabelSettings_io5jf"]
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_livq0"]
font_size = 24

[node name="DeathMenu" type="CanvasLayer"]
script = ExtResource("1_capo8")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="died" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.233
anchor_top = 0.28
anchor_right = 0.44
anchor_bottom = 0.37
offset_left = 9.76001
offset_top = 39.4
offset_right = 16.3599
offset_bottom = 79.4
size_flags_vertical = 0
text = "Skill Issue"
label_settings = SubResource("LabelSettings_2x622")

[node name="Buttons" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.24
anchor_top = 0.427
anchor_right = 0.459
anchor_bottom = 0.722
offset_left = 1.36002
offset_top = 67.8
offset_right = -111.44
offset_bottom = 11.4
scale = Vector2(1.75, 1.5)
size_flags_vertical = 4
theme_override_constants/separation = 30

[node name="PlayButton" type="TextureButton" parent="Panel/Buttons"]
layout_mode = 2
size_flags_horizontal = 0
texture_normal = ExtResource("2_ygwxt")
texture_pressed = ExtResource("3_g5t6f")
texture_hover = ExtResource("4_7fnvi")
stretch_mode = 3

[node name="Label" type="Label" parent="Panel/Buttons/PlayButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Try Again"
horizontal_alignment = 1

[node name="MenuButton" type="TextureButton" parent="Panel/Buttons"]
layout_mode = 2
size_flags_horizontal = 0
texture_normal = ExtResource("2_ygwxt")
texture_pressed = ExtResource("3_g5t6f")
texture_hover = ExtResource("4_7fnvi")
stretch_mode = 3

[node name="Label" type="Label" parent="Panel/Buttons/MenuButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Main menu
"
horizontal_alignment = 1

[node name="SubmitButton" type="TextureButton" parent="Panel/Buttons"]
layout_mode = 2
size_flags_horizontal = 0
texture_normal = ExtResource("2_ygwxt")
texture_pressed = ExtResource("3_g5t6f")
texture_hover = ExtResource("4_7fnvi")
stretch_mode = 3

[node name="Label" type="Label" parent="Panel/Buttons/SubmitButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Submit Score"
label_settings = SubResource("LabelSettings_jruia")
horizontal_alignment = 1

[node name="Statstitle" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.56
anchor_top = 0.431
anchor_right = 0.957
anchor_bottom = 0.547
offset_left = -29.0001
offset_top = -167.8
offset_right = -28.4
offset_bottom = -167.6
size_flags_vertical = 0
text = "Stats"
label_settings = SubResource("LabelSettings_io5jf")

[node name="statsvcontainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.559
anchor_top = 0.453
anchor_right = 0.902
anchor_bottom = 0.624
offset_left = -28.8
offset_top = -78.4
offset_right = -234.4
offset_bottom = 16.8
size_flags_horizontal = 3

[node name="statLabel" type="Label" parent="Panel/statsvcontainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
text = "Damageup = 1
firerate = 0
enemies killed = 1
huhhahah = 0
idiot = true"
label_settings = SubResource("LabelSettings_livq0")

[node name="Itemtitle" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.56
anchor_top = 0.431
anchor_right = 0.957
anchor_bottom = 0.547
offset_left = -25.8
offset_top = 174.68
offset_right = -25.2
offset_bottom = 174.88
size_flags_vertical = 0
text = "Items
"
label_settings = SubResource("LabelSettings_io5jf")

[node name="ItemsContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.54
anchor_top = 0.762
anchor_right = 0.901
anchor_bottom = 0.921
offset_top = 0.399963
offset_right = -0.200073
offset_bottom = 0.199951
grow_horizontal = 0
grow_vertical = 0

[node name="ItemsGridContainer" type="GridContainer" parent="Panel/ItemsContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
columns = 6

[node name="ItemPanel" parent="Panel/ItemsContainer/ItemsGridContainer" instance=ExtResource("5_dwv1h")]
visible = false
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.772549, 0.0980392, 0.0235294, 1)

[node name="PlayerNameInput" type="LineEdit" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.059
anchor_top = 0.778
anchor_right = 0.197
anchor_bottom = 0.799
offset_left = 237.48
offset_top = 53.84
offset_right = 221.84
offset_bottom = 72.72
grow_vertical = 2
placeholder_text = "Your_nickname"

[node name="HTTPRequest" type="HTTPRequest" parent="."]
